# dandelion

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  Copy_of_dandelion_singularity.ipynb  DESCRIPTION.md  MANIFEST.in  README.md  codecov.yaml  conda_build_config.yaml  conftest.py  dandelion_singularity.ipynb  environment.yml  environment_pre3.10.yml  manifest.json  manifest.py  meta.yaml  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_dev.txt  setup.cfg  setup.py  shields.json
.github/: dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  general.yml  question.md  question.yml
.github/workflows/: badge-devel.yml  badge.yml  dependabot-autoapprove.yml  formatting.yaml  gh-pages.yml  master.yml  native-install.yml  publish_pypi.yml  singularity_container-install.yml  singularity_container-install_weekly.yml  test.yml  tests-master.yml  tests.yml  tests_R.yml  tests_weekly.yml
container/: .mambarc  build.sh  changeo_clonotypes.py  dandelion_preprocess.py  dandelion_singularity.ipynb  environment.yml  environment_dev.yml  environment_master.yml  environment_test.yml  example_meta.csv  prepare_database.py  sc-dandelion.def  sc-dandelion_dev.def  sc-dandelion_master.def  sc-dandelion_remote.def  sc-dandelion_test.def  setup_mamba.sh
container/optional_file/: mouse_gl_ogrdb.aux
container/scripts/: changeo_clonotypes.py  dandelion_preprocess.py  prepare_imgt_database.py  prepare_ogrdb_database.py  setup_mamba.sh  utils.py
container/tests/: test.csv  test_container.py
dandelion/: __init__.py  _metadata.py  version.py
dandelion/logging/: __init__.py  _badge.py  _logging.py  _metadata.py  _scmtag.py  _settings.py  _version.py  logger.py  version.py
dandelion/plotting/: __init__.py  _plotting.py
dandelion/preprocessing/: __init__.py  _preprocessing.py
dandelion/tests/: __init__.py  fixtures.py  r_install.R  test_airr.py  test_preprocessing.py  test_tools.py  test_tr_preprocessing.py
dandelion/tools/: __init__.py  _chao1.py  _diversity.py  _gini.py  _network.py  _shannon.py  _tools.py  _trajectory.py
dandelion/utilities/: __init__.py  _blastn.py  _core.py  _igblastn.py  _io.py  _makeblastdb.py  _misc.py  _pathing.py  _tigger-genotype.py  _utilities.py
database/blast/: .Rapp.history
docs/: Makefile  README.md  README.rst  api.rst  conf.py  environment.yml  index.rst  references.rst  requirements.txt  tutorial_short.rst  untitled.yaml
docs/_generate/: dandelion.Dandelion.write_pkl.rst  dandelion.pl.barplot.rst  dandelion.pl.clone_network.rst  dandelion.pl.clone_rarefaction.rst  dandelion.pp.calculate_threshold.rst  dandelion.pp.external.creategermlines.rst  dandelion.pp.external.parsedb_light.rst  dandelion.pp.external.recipe_scanpy_qc.rst  dandelion.pp.quantify_mutations.rst  dandelion.preprocessing.assign_isotypes.rst  dandelion.preprocessing.external.parsedb_light.rst  dandelion.tl.clone_diversity.rst  dandelion.tl.clone_rarefaction.rst  dandelion.tl.extract_edge_weights.rst  dandelion.tl.transfer.rst  dandelion.tools.clone_centrality.rst  dandelion.tools.clone_degree.rst  dandelion.tools.clone_diversity.rst  dandelion.utilities.Dandelion.copy.rst  dandelion.utl.concat.rst  dandelion.utl.read_h5.rst
docs/_static/: dandelion.plotting.stackedbarplot.rst  dandelion.tools.clone_size.rst  dandelion.tools.transfer.rst
docs/modules/: dandelion.Dandelion.write_h5.rst  dandelion.logging.print_header.rst  dandelion.logging.print_versions.rst  dandelion.plotting.clone_overlap.rst  dandelion.preprocessing.create_germlines.rst  dandelion.preprocessing.external.assigngenes_igblast.rst  dandelion.preprocessing.external.parsedb_heavy.rst  dandelion.preprocessing.external.tigger_genotype.rst  dandelion.preprocessing.filter_bcr.rst  dandelion.preprocessing.filter_contigs.rst  dandelion.preprocessing.format_fasta.rst  dandelion.preprocessing.reassign_alleles.rst  dandelion.tools.clone_rarefaction.rst  dandelion.tools.generate_network.rst  (+1 more)
docs/notebooks/: gamma_delta.rst  (+36 more)
notebook/: 1_dandelion_preprocessing.html  1_dandelion_preprocessing.ipynb  1_dandelion_preprocessing.md  2_dandelion_filtering.html  2_dandelion_filtering.ipynb  3_dandelion_findingclones.html  3_dandelion_findingclones.ipynb
notebooks/: 0_dandelion_primer.ipynb  1_dandelion_preprocessing-10x data.ipynb  1_dandelion_preprocessing-10x_data.ipynb  1_dandelion_preprocessing.html  1_dandelion_preprocessing.ipynb  1b_dandelion_noreannotation-10x_data.ipynb  2_dandelion_filtering-10x data.ipynb  2_dandelion_filtering.html  2_dandelion_filtering.ipynb  3.5_dandelion_plotting.ipynb  3_dandelion_findingclones-10x_data.ipynb  3_dandelion_findingclones.html  3_dandelion_findingclones.ipynb  3_dandelion_findingclones_and_analysis.ipynb  3a_dandelion_findingclones.ipynb  3b_dandelion_plotting.ipynb  4_dandelion_preprocessing_TCR_for_scirpy.ipynb  4_dandelion_reticulating_in_R.ipynb  4_dandelion_visualization-10x_data.ipynb  5_dandelion_diversity_and_mutation-10x_data.ipynb  5_dandelion_preprocessing_TCR_attempt.ipynb  5_dandelion_preprocessing_TCR_for_scirpy.ipynb  5_dandelion_running_from_R.ipynb  6_dandelion_dev.ipynb
test_10x/: all_contig.fasta  all_contig_annotations.csv
tests/: __init__.py  conftest.py  fixtures.py  fixtures_mouse.py  initialise-test.py  r_dependencies.R  r_install.R  test.csv  test_IO.py  test_Sun.ipynb  test_airr.py  test_airr_input.py  test_ari_comparison.py  test_clone_calling.py  test_clone_naming.py  test_conversion.py  test_distance_matrix_polars.py  test_distance_matrix_polars_full.py  test_filter.py  test_find_clones_final.py  test_generate_network.py  test_group_sequences_index.py  test_highconf.py  test_importr.py  test_indexing_correctness.py  test_init.py  test_io.py  test_lazydistances_polars.py  test_load_data.py  test_locus_values.py  test_logging.py  test_metadata_check.py  test_metadata_clones.py  test_missing_cells.py  test_missing_clones.py  test_mouse.py  test_mouse2.py  test_mouse3.py  test_mouse_ogrdb.py  test_mouse_ogrdb_BALB_c.py  (+34 more)
(+2016 files in other folders)
