[tool.black]
line-length = 80
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
fail-under = 100
exclude = [
  "setup.py",
  "docs",
  "build",
  "data",
  "bin",
  "dandelion/external",
  "tests",
]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore::FutureWarning",
]
addopts = "--cov src/dandelion --cov-report=xml -rP"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["containter/*", "src/dandelion/external/*"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-dandelion"
dynamic = ["version"]
authors = [{ name = "zktuong", email = "z.tuong@uq.edu.au" }]
description = "sc-TCR/BCR-seq analysis tool"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GNU Affero General Public License v3 or later (AGPLv3+)" }
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
keywords = ["dandelion", "single-cell", "immune", "TCR", "BCR"]
dependencies = [
  "airr",
  "setuptools_scm[toml]<8.2.1",
  "numpy<2.2.5",
  "pandas<2.2.4",
  "changeo<1.3.1",
  "anndata<0.11.4",
  "scanpy<1.11.1",
  "scikit-learn<1.6.2",
  "scipy<1.15.3",
  "numba<0.61.1",
  "seaborn<0.13.3",
  "networkx<3.4.3",
  "leidenalg<0.10.3",
  "polyleven<0.9.1",
  "h5py<3.13.1",
  "adjustText<1.3.1",
  "distance<0.1.4",
  "plotnine<0.14.6",
  "palettable<3.3.4",
  "mizani<0.13.2",
  "nxviz<0.7.7",
]

[project.urls]
homepage = "https://github.com/zktuong/dandelion/"
documentation = "https://sc-dandelion.readthedocs.io/"

[project.optional-dependencies]
docs = [
  "airr<1.5.2",
  "ipykernel",
  "biopython<1.86",
  "changeo<1.3.1",
  "presto<0.7.5",
  "pyyaml",
  "yamlordereddictloader",
  "sphinx<8.2",
  "nbsphinx<0.9.8",
  "sphinx-autodoc-typehints<3.1.1",
  "sphinx_rtd_theme<3.0.3",
  "readthedocs-sphinx-ext<2.2.6",
  "recommonmark<0.7.2",
]
scirpy = ["scirpy<0.23.0", "awkward<2.7.5", "mudata<0.3.2"]

[tool.setuptools]
include-package-data = true
package-data = { "dandelion" = [
  "bin/tigger-genotype.R",
  "bin/MakeDb_gentle.py",
] }
# Use data-files for extra files, if required
data-files = { bin = ["bin/tigger-genotype.R", "bin/MakeDb_gentle.py"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
